<?xml version="1.0" encoding="utf-8"?><!-- fragment_screen_slide_page.xml -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <RelativeLayout
            android:id="@+id/video_shutter"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                android:id="@+id/video_space"
                android:layout_height="250dp"
                android:layout_width="wrap_content" />

            <View
                android:background="@android:color/black"
                android:id="@+id/shutter_view"
                android:layout_height="250dp"
                android:layout_width="wrap_content"
                android:visibility="invisible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/detail_instruction"
            android:layout_below="@id/video_shutter"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:textAppearance="?android:textAppearanceMedium"
            tools:text="description text view" />


    </RelativeLayout>

</ScrollView>