<?xml version="1.0" encoding="utf-8"?>

<!-- activity_screen_slide.xml -->
<android.support.v4.view.ViewPager xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pager"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
